welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:15: error: not found: value fonctionTest
do{pasDeSerpent();}while(fonctionTest()==true)
                         ^