welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
baisseBrosse();
def fontionTest(){
if (estFaceMur()==true&&getDirection==Direction.NORD){return true}
else{return false}
}
			   
def pasDeSerpent(){
if(estFaceMur()==true){
	if(getDirection() == Direction.EST){gauche(); avance(); gauche();}
	else{if (getDirection() == Direction.OUEST){droite();avance();droite();}}
}else{avance();}
}
do{pasDeSerpent();}while(fonctionTest()==true)
	
}


